<resources>
    <string name="app_name">Projet_android_agopian_simon</string>
    <string name="main_text">Welcome to your favorite app</string>
    <string name="tab_home">Home</string>
    <string name="tab_profile">Profile</string>
    <string name="home_fragment_title">Principal</string>
    <string name="profile_fragment_title">Profile</string>
    <string name="surname_hint">Surname</string>
    <string name="name_hint">Name</string>
    <string name="save_button">Save</string>
    <string name="photo_button">take photo</string>
    <string name="send_notif">Send notification</string>
    <string name="channel_description">Channel\'s description</string>
    <string name="hello">Hello</string>
    <string name="tab_rocket">Rocket</string>
</resources>