<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profile_fragment"
        android:text="@string/profile_fragment_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        ></TextView>
    <EditText
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_fragment"/>
    <EditText
        android:id="@+id/surname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/surname_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name"/>
    <Button
        android:id="@+id/save_profile"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/save_button"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/surname"/>
    <Button
        android:id="@+id/send_notif"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/send_notif"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/save_profile"/>
</androidx.constraintlayout.widget.ConstraintLayout>